Archive/Old/192.168.224.247/scans/tcp80/tcp_80_http_whatweb.md
WhatWeb report for http://192.168.224.247:80
Status    : 200 OK
Title     : RELIA - New Hire Information
IP        : 192.168.224.247
Country   : RESERVED, ZZ

Summary   : Apache[2.4.54], HTML5, HTTPServer[Apache/2.4.54 (Win64) OpenSSL/1.1.1p PHP/8.1.10], OpenSSL[1.1.1p], PHP[8.1.10], Script, X-Powered-By[PHP/8.1.10]

Detected Plugins:
[ Apache ]
	The Apache HTTP Server Project is an effort to develop and
	maintain an open-source HTTP server for modern operating
	systems including UNIX and Windows NT. The goal of this
	project is to provide a secure, efficient and extensible
	server that provides HTTP services in sync with the current
	HTTP standards.

	Version      : 2.4.54 (from HTTP Server Header)
	Google Dorks: (3)
	Website     : http://httpd.apache.org/

[ HTML5 ]
	HTML version 5, detected by the doctype declaration


[ HTTPServer ]
	HTTP server header string. This plugin also attempts to
	identify the operating system from the server header.

	String       : Apache/2.4.54 (Win64) OpenSSL/1.1.1p PHP/8.1.10 (from server string)

[ OpenSSL ]
	The OpenSSL Project is a collaborative effort to develop a
	robust, commercial-grade, full-featured, and Open Source
	toolkit implementing the Secure Sockets Layer (SSL v2/v3)
	and Transport Layer Security (TLS v1) protocols as well as
	a full-strength general purpose cryptography library.

	Version      : 1.1.1p
	Website     : http://www.openssl.org/

[ PHP ]
	PHP is a widely-used general-purpose scripting language
	that is especially suited for Web development and can be
	embedded into HTML. This plugin identifies PHP errors,
	modules and versions and extracts the local file path and
	username if present.

	Version      : 8.1.10
	Version      : 8.1.10
	Google Dorks: (2)
	Website     : http://www.php.net/

[ Script ]
	This plugin detects instances of script HTML elements and
	returns the script language/type.


[ X-Powered-By ]
	X-Powered-By HTTP header

	String       : PHP/8.1.10 (from x-powered-by string)

HTTP Headers:
	HTTP/1.1 200 OK
	Date: Wed, 03 Apr 2024 03:58:11 GMT
	Server: Apache/2.4.54 (Win64) OpenSSL/1.1.1p PHP/8.1.10
	X-Powered-By: PHP/8.1.10
	Content-Length: 4269
	Connection: close
	Content-Type: text/html; charset=UTF-8


